# ralf-utils

./: .clang-format  .clang-tidy  .gitattributes  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  vcpkg.json
cmake/: Findlz4.cmake
lib/: CMakeLists.txt  libralf.pc.in  libralfConfig.cmake.in
lib/archive/: ArchiveEntries.cpp  ArchiveEntries.h  ArchiveReader.cpp  ArchiveReader.h  CMakeLists.txt  ILibarchiveReader.h  LibarchiveCommon.cpp  LibarchiveCommon.h  LibarchiveFileReader.cpp  LibarchiveFileReader.h  LibarchiveStreamReader.cpp  LibarchiveStreamReader.h
lib/core/: Base64.cpp  Base64.h  CMakeLists.txt  Certificate.cpp  Compatibility.h  CryptoDigestBuilder.cpp  CryptoDigestBuilder.h  DigitalSignature.cpp  DigitalSignature.h  Error.cpp  ICertificateImpl.h  ICryptoDigestBuilderImpl.h  IDigitalSignatureImpl.h  IPackageAuxMetaDataImpl.h  IPackageEntryImpl.h  IPackageImpl.h  IPackageMetaDataImpl.h  IPackageMountImpl.h  IPackageReaderImpl.h  IPermissionsImpl.h  IVerificationBundleImpl.h  LibRalf.cpp  LibRalf.h.in  LogMacros.h  Logging.cpp  Package.cpp  PackageAuxMetaData.cpp  PackageAuxMetaDataImpl.cpp  PackageAuxMetaDataImpl.h  PackageEntry.cpp  PackageMetaData.cpp  PackageMount.cpp  PackageReader.cpp  Permissions.cpp  PermissionsImpl.h  Utils.cpp  Utils.h  VerificationBundle.cpp  VersionConstraint.cpp  VersionNumber.cpp  (+2 more)
lib/crypto/openssl/: Base64Impl.cpp  Base64Impl.h  CMakeLists.txt  CertificateImpl.cpp  CertificateImpl.h  CryptoDigestBuilderImpl.cpp  CryptoDigestBuilderImpl.h  CryptoUtils.cpp  CryptoUtils.h  DigitalSignatureImpl.cpp  DigitalSignatureImpl.h  VerificationBundleImpl.cpp  VerificationBundleImpl.h
lib/crypto/xmldsig/: CMakeLists.txt  Signature1.xsd  XmlDSigSchema.h.in  XmlDSigUtils.cpp  XmlDSigUtils.h  XmlDigitalSignature.cpp  XmlDigitalSignature.h  XmlDigitalSignatureImpl.cpp  XmlDigitalSignatureImpl.h
lib/dm-verity/: CMakeLists.txt  DevMapper.cpp  DevMapper.h  DmVerityMount.cpp  DmVerityMount.h  DmVerityMounterLinux.cpp  DmVerityMounterLinux.h  DmVerityProtectedFile.cpp  DmVerityProtectedFile.h  DmVeritySuperBlock.cpp  DmVeritySuperBlock.h  DmVerityVerifier.cpp  DmVerityVerifier.h  IDmVerityMounter.h  IDmVerityProtectedFile.h  IDmVerityVerifier.h  README.md  UDevNotifySemaphore.cpp  UDevNotifySemaphore.h
lib/erofs/: CMakeLists.txt  ErofsExtentMap.cpp  ErofsExtentMap.h  ErofsInode.cpp  ErofsInode.h  ErofsInodeCompressedDataReader.cpp  ErofsInodeCompressedDataReader.h  ErofsInodeFlatDataReader.cpp  ErofsInodeFlatDataReader.h  ErofsRawImageFile.cpp  ErofsRawImageFile.h  ErofsReader.cpp  ErofsReader.h  ErofsSuperBlock.cpp  ErofsSuperBlock.h  ErofsTypes.h  IErofsImageFile.h  IErofsInodeDataReader.h  IErofsReader.h  README.md
lib/oci/: CMakeLists.txt  IOCIBackingStore.h  OCIArchiveBackingStore.cpp  OCIArchiveBackingStore.h  OCIArchiveImageLayerReader.cpp  OCIArchiveImageLayerReader.h  OCIDescriptor.cpp  OCIDescriptor.h  OCIDirBackingStore.cpp  OCIDirBackingStore.h  OCIErofsImageEntry.cpp  OCIErofsImageEntry.h  OCIErofsImageLayerReader.cpp  OCIErofsImageLayerReader.h  OCIMappableFile.cpp  OCIMappableFile.h  OCIMediaTypes.h  OCIPackage.cpp  OCIPackage.h  OCIPackageMetaDataImpl.cpp  OCIPackageMetaDataImpl.h  OCIUtils.cpp  OCIUtils.h
lib/w3c-widget/: CMakeLists.txt  ConfigXmlSchemas.h.in  ConfigXmlV1.xsd  ConfigXmlV2.xsd  IZipReaderFactory.h  W3CPackage.cpp  W3CPackage.h  W3CPackageMetaDataBuilder.cpp  W3CPackageMetaDataBuilder.h  W3CPackageMetaDataImpl.cpp  W3CPackageMetaDataImpl.h  ZipReaderFactory.cpp  ZipReaderFactory.h
test/: CMakeLists.txt
test/core/: ArchiveTests.cpp  Base64Tests.cpp  CMakeLists.txt  ErrorTests.cpp  MetaDataJsonTests.cpp  MockDmVerityMounter.h  MockPackageMountImpl.h  OCIPackageConfigTests.cpp  PackageExtractionTests.cpp  PackageFormatTests.cpp  PackageIdTests.cpp  PackageMountableTests.cpp  PackageVerificationTests.cpp  TestDataCheck.cpp  VersionConstraintTest.cpp  VersionNumberTests.cpp  W3CPackageMetaDataTests.cpp  W3CPackageTests.cpp
test/core/data/: empty.erofs.ralf  empty.ralf  modtimes.erofs.ralf  modtimes.ralf  modtimes.wgt  oci-config-01.json  oci-config-02.json  ralf-144mb-unaligned.tar  ralf-144mb.tar  ralf-16k-files.tar  ralf-simple.tar  simple-expired-test1.ralf  simple-expired-test2.ralf  simple-expired-test3.ralf  simple-expired-test4.ralf  simple.erofs.wgt  simple.wgt  widget-144mb.wgt  widget-16k-files.wgt
test/core/scripts/: generate-ecdsa-p256-signing-creds.sh  generate-expired-certs.sh  generate-signing-creds.sh
test/crypto/: CMakeLists.txt  CertificateTests.cpp  CryptoDigestTests.cpp  TestDataCheck.cpp  VerificationBundleTests.cpp  XmlDSigSignatureTests.cpp
test/crypto/data/: concat-certs.pem  concat-keys-certs.pem  expired.crt  future.crt  test1.der  test1.pem  test2.der  test2.pem
test/crypto/scripts/: generate-expired-certs.sh  generate-xmldsig-expired-certs.sh
test/dm-verity/: CMakeLists.txt  DevMapperTests.cpp  MountTests.cpp  ProtectedFileTests.cpp  SuperBlockTests.cpp  UDevNotifySemaphoreTests.cpp  VerifierTests.cpp
test/dm-verity/scripts/: generate.py
test/erofs/: CMakeLists.txt  ErofsReaderTests.cpp  ErofsSuperBlockTests.cpp
test/erofs/data/: erofs_1.img  erofs_1.json  erofs_2.img  erofs_2.json  erofs_bad_dirent_1.img  erofs_bad_dirent_2.img  erofs_bad_dirent_3.img  erofs_bad_filename.img  erofs_empty.img  erofs_legacy.img  erofs_legacy.json  erofs_lotsoffiles.img  erofs_lotsoffiles.json  erofs_mtimes.img  erofs_mtimes.json  erofs_uncompr.img  erofs_uncompr.json  erofs_utf8_fnames.img  erofs_utf8_fnames.json  sherlock-holmes.txt
test/erofs/scripts/: generate.py
test/install/: testbuild.cpp
test/install/automake/: Makefile.am  configure.ac
test/install/cmake/: CMakeLists.txt  testbuild.cpp
test/install/meson/: meson.build
test/utils/: CMakeLists.txt  FakeTime.cpp  FakeTime.h  FileUtils.cpp  FileUtils.h  MockFile.cpp  MockFile.h  MockMount.cpp  MockMount.h  ShaUtils.cpp  ShaUtils.h  StringUtils.cpp  StringUtils.h  TempDirectory.cpp  TempDirectory.h  TimeUtils.cpp  TimeUtils.h
tools/unwgt/: CMakeLists.txt  README.md  configspec.cpp  configxml.cpp  unwgt.cpp
(+104 files in other folders)
